--- a/404.html
+++ b/404.html
@@ -1,1 +1,28 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/dev/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/dev/manifest.json"/><title>React App</title><script defer="defer" src="/dev/static/js/main.fddb8a0a.js"></script><link href="/dev/static/css/main.f1a0566d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/dev/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="manifest" href="/dev/manifest.json" />
+    <title>404</title>
+    <script defer="defer" src="/dev/static/js/main.fddb8a0a.js"></script>
+    <link href="/dev/static/css/main.f1a0566d.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      const path = "/dev/";
+      const location = window.location.pathname.split(path);
+      location[0] = "?";
+      window.location.replace(path + location.join("/"))
+      console.log(location[1].length);
+      console.log(path + location.join("/"));
+    </script>
+  </body>
+</html>
