--- a/404.html
+++ b/404.html
@@ -16,10 +16,8 @@
     <script>
       const path = "/dev/";
       const loc = window.location.pathname.split(path);
-      loc.length>1?loc[0] = "?":null;
+      loc[0] = "?"
       window.location.replace(path + loc.join("/"))
-      console.log(loc[1].length);
-      console.log(path + loc.join("/"));
     </script>
   </body>
 </html>
