--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
       console.log(loc)
       if(loc.length>1){
       loc[0] = "?"
-      window.location.replace(path + loc.join("/"))}else{window.location.replace(path + loc.join("?"))}
+      window.location.replace(path + loc.join("/"))}else{window.location.replace(path + loc.replace("/","?"))}
     </script>
   </body>
 </html>
