--- a/404.html
+++ b/404.html
@@ -16,10 +16,13 @@
     <script>
       const path = "/dev/";
       const loc = window.location.pathname.split(path);
-      console.log(loc)
-      if(loc.length>1){
-      loc[0] = "?"
-      window.location.replace(path + loc.join("/"))}else{window.location.replace(path + loc.replace("/","?"))}
+      console.log(loc);
+      if (loc.length > 1) {
+        loc[0] = "?";
+        window.location.replace(path + loc.join("/"));
+      } else {
+        window.location.replace(path + loc.join("").replace("/", "?"));
+      }
     </script>
   </body>
 </html>
