--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         loc[0] = "?";
         window.location.replace(path + loc.join("/"));
       } else {
-        window.location.replace(path + loc.join("").replace("/", "?"));
+        window.location.replace(path + loc.join("").replace("/", "?/"));
       }
     </script>
   </body>
